[tool.poetry]
name = "tp4-dm"
version = "0.1.0"
description = ""
authors = ["wadhah <wadhah.mahroug15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
ipykernel = "^6.12.1"
matplotlib = "^3.5.1"
sklearn = "^0.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
